<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.es.nsi</groupId>
  <artifactId>common-lib</artifactId>
  <version>1.0.1</version>
  <packaging>jar</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.6.4</version>
  </parent>

  <properties>
    <project.scm.id>github</project.scm.id>
    <maven.javadoc.skip>true</maven.javadoc.skip>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <!-- For JAXB support. -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>

    <!-- For content encoding types. -->
    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>javax.mail-api</artifactId>
      <version>1.6.2</version>
    </dependency>

    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.2</version>
    </dependency>

    <!-- Helper annotations for Getter/Setters and Builders. -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>[30.1.1-jre,]</version>
    </dependency>

    <!-- For FileUtils -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>[2.11.0,]</version>
    </dependency>

    <!-- Log4j for logging. -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>[2.17.0,)</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>[2.17.0,)</version>
    </dependency>

    <!-- To handle XML dateTime manipulation. -->
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>[2.10.13,]</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <!-- Compatible down to java 1.8. Tested 1.8, 11, and 15. -->
          <source>1.8</source>
          <target>1.8</target>
          <!-- <release>11</release> -->
          <compilerArgument>-Xlint:deprecation</compilerArgument>
          <compilerArgument>-Xlint:unchecked</compilerArgument>
        </configuration>
      </plugin>


      <plugin>
        <!-- We use this plugin to ensure that our usage of the
        maven-jaxb2-plugin is JDK 8 compatible in absence of a fix
        for https://java.net/jira/browse/MAVEN_JAXB2_PLUGIN-80. -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
        <executions>
          <execution>
            <id>set-additional-system-properties</id>
            <goals>
              <goal>set-system-properties</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <properties>
            <property>
              <name>javax.xml.accessExternalDTD</name>
              <value>file,http,all</value>
            </property>
          </properties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <version>2.4</version>
        <executions>

          <!-- Here we build the NSI Topology schema. -->
          <execution>
            <id>topology</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>${basedir}/src/main/schema/topology/xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>${basedir}/src/main/schema/topology/xjb</xjbSource>
              </xjbSources>
              <packageName>net.es.nsi.common.jaxb.nml</packageName>
            </configuration>
          </execution>

          <!-- Here we build the NSA Discovery Document schema. -->
          <execution>
            <id>nsa</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>${basedir}/src/main/schema/nsa/xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>${basedir}/src/main/schema/nsa/xjb</xjbSource>
              </xjbSources>
              <packageName>net.es.nsi.common.jaxb.nsa</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>

          <!-- Here we build the Digitial Signature schema. -->
          <execution>
            <id>signatures</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <sources>
                <source>${basedir}/src/main/schema/signatures/xsd</source>
              </sources>
              <xjbSources>
                <xjbSource>${basedir}/src/main/schema/signatures/xjb</xjbSource>
              </xjbSources>
              <packageName>net.es.nsi.common.jaxb.signatures</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
        </executions>

        <dependencies>
          <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-xjc</artifactId>
            <version>2.3.6</version>
            <scope>compile</scope>
          </dependency>

          <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>2.3.0.1</version>
            <scope>compile</scope>
          </dependency>

          <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.3.6</version>
            <scope>compile</scope>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>--illegal-access=permit</argLine>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}/var</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>examples-source-zip</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/BandwidthOnDemand/*</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub BanwidthOnDemand nsi-common-lib Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/BandwidthOnDemand/nsi-common-lib</url>
    </repository>
  </distributionManagement>

</project>

